# study_c

./: .gitignore  CMakeLists.txt  README.md
include/: number_utill.h
src/: main.c  number_util.c
